--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -1,7 +1,7 @@
 <ion-header>
 
     <ion-navbar>
-    <button ion-button menuToggle>
+    <button ion-button menuToggle *ngIf='authStatus'>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Anmeldung</ion-title>
