--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,8 +11,8 @@
 
 Guten Tag <br><br>
 
-Bitte melden Sie sich mit Ihren Zugangsdaten an. 
+-- Text anpassen --
 <br><br>
-Nach erfolgreichem Login können die für Sie relevanten Rehabilitations-Kliniken unter "Broschüren" sehen.
+<!--Nach erfolgreichem Login können die für Sie relevanten Rehabilitations-Kliniken unter "Broschüren" sehen.-->
 
 </ion-content>
