--- a/src/pages/reha-files/reha-files.html
+++ b/src/pages/reha-files/reha-files.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the RehaFiles page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -18,7 +12,8 @@
 
 <ion-content padding>
   <p>Im Folgenden finden Sie die Auflistung der für Sie relevanten Kliniken mit deren Broschüren.</p>
-  
-  <button full ion-button="" color="primary" (click)="launch('http://www.fmh.ch/files/pdf12/Rechtliche_Grundlagen_2013_D.pdf')">Display pdf</button>
+
+  <button full ion-button="" (click)="launch('http://www.fmh.ch/files/pdf12/Rechtliche_Grundlagen_2013_D.pdf')">Display pdf</button>
+  <button full ion-button="" (click)="launch('https://www.google.com')">Display pdf</button>
 
 </ion-content>
