--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,11 @@
 </ion-header>
 
 <ion-content padding>
-
-Guten Tag <br><br>
-
--- Text anpassen --
-<br><br>
-<!--Nach erfolgreichem Login können die für Sie relevanten Rehabilitations-Kliniken unter "Broschüren" sehen.-->
-
+  <p>
+    Guten Tag <br><br> Damit Sie Ihre relevanten Kliniken sehen können, navigieren Sie bitte links in der Navigation auf
+    "Broschüren". <br><br> In "Daten & Informationen" ist der Status des Kostengutsprache-Gesuchs zu sehen. <br><br>Dieser
+    wird aktualisiert, sobald das Spitalzentrum Biel die Antwort Ihrer Krankenkasse erhält.
+    <br><br>
+    <!--Nach erfolgreichem Login können die für Sie relevanten Rehabilitations-Kliniken unter "Broschüren" sehen.-->
+  </p>
 </ion-content>
