--- a/src/pages/reha-files/reha-files.html
+++ b/src/pages/reha-files/reha-files.html
@@ -10,7 +10,10 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Im Folgenden finden Sie die Auflistung der für Sie relevanten Kliniken mit deren Broschüren.</p>
+  <p>Im Folgenden finden Sie die Auflistung der für Sie relevanten Kliniken. <br> <br> Berühren Sie mit Ihrem Finger das blaue Kästchen
+    derjenigen Klinik, die Sie gerne betrachten möchten - die Broschüre öffnet sich im selben Fenster. <br><br>
+    Mit "zurück zur App" gelangen Sie zurück zur Übersicht. 
+  </p>
   <br>
   <ion-list>
     <!--<ion-item *ngFor="let user of usersArray; let i = index;">-->
