--- a/src/pages/checkliste/checkliste.html
+++ b/src/pages/checkliste/checkliste.html
@@ -17,69 +17,69 @@
 
   <ion-item>
     <ion-label>Spezielle eigene Medikamente</ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item text-wrap>
     <ion-label>
       Spezielle Hilfsmittel, die Sie im Moment benötigen (z.B. Lagerungskissen, Prothesen, Gehhilfen, Inhalationsmaterial, Diabetesmaterial)
     </ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item>
     <ion-label>Kleidung für drinnen und draussen
     </ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item>
     <ion-label>Unterwäsche
     </ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item>
     <ion-label>Socken</ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item>
     <ion-label>Trainer oder Homedress</ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item>
     <ion-label>Nachthemd oder Pyjama</ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item text-wrap>
     <ion-label> Sportbekleidung für drinnen und draussen (je nach Jahreszeit auch Handschuhe und Mütze)</ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item text-wrap>
     <ion-label> Regenschutz und stabile Schuhe für draussen
     </ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item text-wrap>
     <ion-label> Turnschuhe für drinnen (wenn vorhanden)
     </ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item>
     <ion-label>Badebekleidung</ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
   <ion-item>
     <ion-label>Toilettenartikel
     </ion-label>
-    <ion-checkbox></ion-checkbox>
+    <!--<ion-checkbox></ion-checkbox>-->
   </ion-item>
 
 </ion-content>
