Code-Bereinigung, Kommentare zu Methoden, Unnötiges gelöscht.

--- a/src/pages/showdata/showdata.html
+++ b/src/pages/showdata/showdata.html
@@ -23,7 +23,7 @@
       <ion-item>
         <p><b> Auszug der für Sie relevanten Kliniken</b></p>
       </ion-item>
-      <ion-item *ngFor="let user of usersArray2">
+      <ion-item *ngFor="let user of usersArray">
         <p> - {{user.key}}
           <p>
       </ion-item>
