--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -12,9 +12,8 @@
 <ion-content padding>
 
     <div *ngIf='!authStatus'>
-        <br>
-        <h6>Guten Tag<br> <br> Bitte geben Sie Ihre Email-Adresse ein.</h6>
-        <br><br>
+        <br> Guten Tag<br> <br> Bitte geben Sie Ihre Email-Adresse ein.
+        <br><br><br>
         <form (ngSubmit)="login()">
             <ion-list>
                 <ion-item>
